arrumando as imagens

--- a/style.css
+++ b/style.css
@@ -382,7 +382,8 @@ a:hover {
   .container .card-container:nth-child(1),
   .container .card-container:nth-child(3),
   .container .card-container:nth-child(5),
-  .container .card-container:nth-child(7) {
+  .container .card-container:nth-child(7),
+  .container .card-container:nth-child(9) {
       flex-direction: column-reverse;
   }
 
