--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 
 .header-wrapper {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   background: linear-gradient(-45deg, #2c4da6, #ca50c8, #761793, #3b8931);
   background-size: 400% 400%;
   display: flex;
