--- a/style.css
+++ b/style.css
@@ -383,7 +383,9 @@ a:hover {
   .container .card-container:nth-child(3),
   .container .card-container:nth-child(5),
   .container .card-container:nth-child(7),
-  .container .card-container:nth-child(9) {
+  .container .card-container:nth-child(9),
+  .container .card-container:nth-child(11),
+   {
       flex-direction: column-reverse;
   }
 
