alterando a lista de inversao

--- a/style.css
+++ b/style.css
@@ -379,12 +379,7 @@ a:hover {
       flex-direction: column;
   }
 
-  .container .card-container:nth-child(1),
-  .container .card-container:nth-child(3),
-  .container .card-container:nth-child(5),
-  .container .card-container:nth-child(7),
-  .container .card-container:nth-child(9),
-  .container .card-container:nth-child(11) {
+  .container .card-container:nth-child(odd) {
       flex-direction: column-reverse;
   }
 
